Fix pmd and apply spotless